tests/baselines/reference/funClodule(strict=true).errors.txt
funClodule.ts(1,18): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
funClodule.ts(12,18): error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
funClodule.ts(15,10): error TS2814: Function with bodies can only merge with classes that are ambient.
funClodule.ts(19,7): error TS2813: Class declaration cannot implement overload list for 'foo3'.


==== funClodule.ts (4 errors) ====
    declare function foo();
                     ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    declare module foo {
        export function x(): any;
    }
    declare class foo { } // Should error
    
    
    declare class foo2 { }
    declare module foo2 {
        export function x(): any;
    }
    declare function foo2(); // Should error
                     ~~~~
!!! error TS7010: 'foo2', which lacks return-type annotation, implicitly has an 'any' return type.
    
    
    function foo3() { }
             ~~~~
!!! error TS2814: Function with bodies can only merge with classes that are ambient.
!!! related TS6506 funClodule.ts:19:7: Consider adding a 'declare' modifier to this class.
    module foo3 {
         export function x(): any { }
    }
    class foo3 { } // Should error
          ~~~~
!!! error TS2813: Class declaration cannot implement overload list for 'foo3'.
!!! related TS6506 funClodule.ts:19:7: Consider adding a 'declare' modifier to this class.